<resources>
    <string name="app_name">Hand Mirror</string>
    <string name="version">Версия 1.0.40</string>
    <string name="def_err_text">Unknown error</string>
    <string name="splash_text">Today you’re the best ✨</string>
    <string name="onboarding_title_1">The mirror \nin your pocket</string>
    <string name="onboarding_subtitle_1">Shave, fix your makeup, or put your lenses anywhere</string>
    <string name="onboarding_title_2">Even if\nit\'s dark</string>
    <string name="onboarding_subtitle_2">Turn on the backlight mode and adjust the light level</string>
    <string name="onboarding_title_3">Make beautiful selfies</string>
    <string name="onboarding_subtitle_3">The app has 18 frames for beautiful photos</string>
    <string name="onboarding_title_4">Look at yourself from all angles</string>
    <string name="onboarding_subtitle_4">Shoot a short video in 360° mode to see yourself from all sides</string>
    <string name="onboarding_title_5">Make perfect makeup</string>
    <string name="onboarding_subtitle_5">Super zoom for precise contouring</string>
    <string name="onboarding_title_6">Free full access</string>
    <string name="onboarding_subtitle_6">Open all the masks and turn off ad \nfor 3 days for free, then $0.99 per month</string>
    <string name="later">Later</string>
    <string name="recover">Restore</string>
    <string name="next">Next</string>
    <string name="start_free">Start for free</string>
    <string name="pp_start_text">By continuing, I accept </string>
    <string name="privicy_text">Privacy policy </string>
    <string name="terms_text">and Terms of use</string>
    <string name="poll_title">What do you need a mirror for?</string>
    <string name="poll_1">Shave</string>
    <string name="poll_2">Putting on makeup</string>
    <string name="poll_3">Putting on lenses</string>
    <string name="poll_4">Use in the dark</string>
    <string name="poll_5">Brush your teeth</string>
    <string name="poll_6">Just to look</string>
    <string name="ca_title">To begin,\nwe need \ncamera access</string>
    <string name="ca_button">Issue access</string>
    <string name="pay_title">You look great 🔥</string>
    <string name="pay_subtitle">Let the ads not shut you out and all the masks will be available!</string>
    <string name="price1">$0.99/month</string>
    <string name="price2">$2.99/year</string>
    <string name="sub_price1">3 days free</string>
    <string name="subprice2">7 days free</string>
    <string name="econ">Save 67%</string>
    <string name="pay_description">3 days free, then </string>
    <string name="pay_description_year">7 days free, then </string>
    <string name="pay_terms">Terms of use</string>
    <string name="pay_policy">Privacy policy</string>
    <string name="title_360">360° mode</string>
    <string name="subtitle_360">In 360° mode you can see your face from different angles</string>
    <string name="description_360">To do this, take the smartphone in your outstretched hand, start recording and swipe from left to right</string>
    <string name="clear">Got it</string>
    <string name="settings">Settings</string>
    <string name="support_developers">Support the developer</string>
    <string name="buy_prem">Buy Premium</string>
    <string name="rate_app">Rate the app</string>
    <string name="review">Leave feedback </string>
    <string name="other_app">Other apps </string>
    <string name="button_mirror">Mirror</string>
    <string name="button_360">360°</string>
    <string name="gallery_title">Gallery</string>
    <string name="selected">Selected: %1$d</string>
    <string name="bsd_title">Support the developer</string>
    <string name="bsd_icecream">Ice cream</string>
    <string name="bsd_cup">Coffee cup</string>
    <string name="bsd_burger">Hamburger</string>
    <string name="bsd_pizza">Pizza</string>
    <string name="bsd_dinner">Festive dinner</string>
    <string name="bsdr_title">Leave a review</string>
    <string name="bsdr_hint">Write your review</string>
    <string name="bsdr_send">Send</string>
    <string name="bsdrate_title">Did you enjoy app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bsdr_rate_title">Rate the app</string>
    <string name="bsdrate_bad_title">Please help us improve the app!</string>
    <string name="bsdrate_bad_description">Describe what you didn\'t like</string>
    <string name="rate">Rate</string>
    <string name="rate_on_pm">Rate on Google Play</string>
    <string name="prem_masc">Premium masks:</string>
    <string name="dialog_title">Delete highlighted?</string>
    <string name="dialog_subtitle">No possibility of recovery</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="notification_access">access from the notification panel</string>
    <string name="survey1">Do you like “Hand mirror”?</string>
    <string name="survey2">Rate us?</string>
    <string name="survey3">Tell us why?</string>
    <string name="okey">Okey!</string>
    <string name="err_or_like">Do you have a problem or did you like the app? </string>
    <string name="have_problem">I have a problem</string>
    <string name="no_functional">Functions I need are missing</string>
    <string name="idea">I have an idea/suggestion</string>
    <string name="app_unusefull">The application is inconvenient</string>
    <string name="much_ad">A lot of advertising</string>
    <string name="like_it">I like the app</string>
    <string name="other">Other</string>
    <string name="cam_error">Camera does not work</string>
    <string name="bad_quality">Poor image quality</string>
    <string name="threed_err">Problems with 3D mode</string>

    <!--config-->
    <string name="splashType">splashTextEN</string>
    <string name="video_bottext">Show face from some angles</string>
    <!--notif-->
    <string name="saved">Saved</string>
    <string name="image_saved">Image Saved</string>
    <string name="saved_to_gallery">Saved to gallery</string>
    <string name="permission_denied">Permission not received</string>
    <string name="press_to_open">Click to open</string>
</resources>